syntax = "proto3";
package ctrl.v1;

option go_package = "github.com/unkeyed/unkey/go/gen/proto/ctrl/v1;ctrlv1";

// SecretsConfig is stored in the deployments table
// Contains encrypted environment variables snapshotted at deploy time
message SecretsConfig {
  // key -> encrypted value
  map<string, string> secrets = 1;
}

// SecretsService provides decrypted secrets to running workloads.
// This is called by the unkey-env binary injected into customer pods.
service SecretsService {
  // GetDeploymentSecrets returns decrypted environment variables for a deployment.
  // Authentication is via a short-lived token generated at pod creation time.
  rpc GetDeploymentSecrets(GetDeploymentSecretsRequest) returns (GetDeploymentSecretsResponse);
}

message GetDeploymentSecretsRequest {
  // The deployment ID to fetch secrets for
  string deployment_id = 1;
  // Short-lived token for authentication (generated by webhook, stored in DB with TTL)
  string token = 2;
}

message GetDeploymentSecretsResponse {
  // Decrypted environment variables (key -> plaintext value)
  map<string, string> env_vars = 1;
}
